--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -1,1 +1,7 @@
-/* Placeholder - Style to be added */
+/* Login.css */
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;    
+}
