--- a/src/components/pages/Register/Register.css
+++ b/src/components/pages/Register/Register.css
@@ -1,1 +1,7 @@
-/* Placeholder - Style to be added */
+/* Register.css */
+.register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;    
+}
