--- a/src/components/pages/auth/AuthForm.css
+++ b/src/components/pages/auth/AuthForm.css
@@ -1,30 +1,31 @@
 /* AuthForm.css */
 .auth-container {
   width: 100%;
-  max-width: 400px;
-  background-color: var(--background-color);
+  max-width: 400px; /* Taille fixe pour les deux formulaires */
+  background-color: var(--primary-back-color);
   border-radius: 10px;
   box-shadow: var(--box-shadow);
-  padding: 30px 20px;
+  padding: 20px;
   text-align: center;
+  margin: 0 auto; /* Centre horizontalement */
 }
 
 .auth-title {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   color: var(--text-color);
 }
 
 .auth-subtitle {
   font-size: 16px;
   color: var(--placeholder-color);
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 
 .google-btn {
   width: 100%;
   padding: 10px;
-  margin: 10px 0;
+  margin: 4px 0;
   font-size: 16px;
   color: #fff;
   background-color: #db4437; /* Rouge Google */
@@ -42,7 +43,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px 0;
+  margin: 4px 0;
 }
 
 .divider::before,
@@ -68,10 +69,11 @@
   padding: 10px;
   margin: 10px 0;
   font-size: 16px;
-  background-color: var(--input-background);
+  background-color: var(--light-color);
   color: var(--text-color);
-  border: 1px solid var(--input-border);
+  border: 1px solid var(--input-border-color); /* Contour léger */
   border-radius: 5px;
+  transition: border-color 0.3s ease;
 }
 
 .auth-input::placeholder {
@@ -80,7 +82,7 @@
 
 .auth-input:focus {
   outline: none;
-  border-color: var(--primary-color);
+  border-color: var(--secondary-color);
 }
 
 .auth-remember-me {
