--- a/src/components/partiels/Menu/Menu.css
+++ b/src/components/partiels/Menu/Menu.css
@@ -53,7 +53,6 @@ ul {
   margin: 0;
   padding: 0;
   display: flex; /* Aligne les items horizontalement */
-
 }
 
 ul li {
@@ -72,92 +71,65 @@ ul a:hover {
   color: #007bff; /* Couleur au survol */
 }
 
-.menu-account {  
-  display: inline-block;  
-  align-items: center; /* Centre l'icône verticalement */
+/* Ajuste l'icône pour qu'elle soit alignée avec le menu */
+.menu-account {
+  display: inline-flex;
+  align-items: center; /* Centre verticalement */
   justify-content: center;
-  position: relative; /* Nécessaire pour le positionnement absolu du dropdown */  
+  position: relative;
   cursor: pointer;
-  transform: translateY(-3px); /* Ajustez la valeur pour remonter légèrement */
 }
 
 /* =========================
    Dropdown (Menus Déroulants)
 ========================= */
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 100%; /* Position en dessous du parent */
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  padding: 10px 0;
-  list-style: none;
-  min-width: 200px; /* Largeur minimale */
-  z-index: 1000;
-  border: 1px solid #ddd; /* Bordure légère */
-  border-radius: 4px; /* Ajoute un peu de rondeur */  
-}
-
-/* Affichage du menu déroulant au survol */
-.dropdown:hover > .dropdown-menu,
-.menu-account:hover .account-dropdown {
-  display: block;
-}
-
-/* Alignement spécifique pour les menus déroulants */
-
-/* Position ajustée pour aligner le menu du petit bonhomme */
 .account-dropdown {
+  display: none; /* Par défaut, caché */
   position: absolute;
-  top: 30px; /* Position du menu sous l'icône */
-  right: 0;
+  top: calc(100% + 8px); /* Place le menu sous le header avec un espacement */
+  right: -25px; /* Ajuste cette valeur pour décaler le menu vers la droite */
   background-color: var(--primary-back-color);
   border: 1px solid #ddd;
   border-radius: 4px;
   box-shadow: var(--box-shadow);
   list-style: none;
-  padding: 5px; /* Réduit l'espacement interne */
+  padding: 5px;
   z-index: 1000;
-  width: 120px; /* Largeur fixe réduite */
-  text-align: right; /* Texte aligné à gauche */
-  box-sizing: border-box;   
+  width: 120px; /* Largeur fixe */
+  text-align: right; /* Texte aligné à droite */
+  box-sizing: border-box;
+
+  /* Transition pour un effet fluide */
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
+/* Affiche le menu lorsqu'il est actif */
+.menu-account.active .account-dropdown {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+/* Styles pour les éléments dans le dropdown */
 .account-dropdown li {
-  padding: 5px 10px; /* Équilibre l'espacement interne */
+  padding: 3px 5px; /* Réduit l'espacement interne */
+  margin: 0; /* Supprime la marge */
+  line-height: 1.4; /* Ajuste l'espacement vertical */
 }
 
 .account-dropdown li a {
   color: #333;
-  text-decoration: none; /* Taille de police */
+  text-decoration: none; /* Supprime le soulignement */
   display: block; /* Chaque lien prend toute la largeur */
   transition: color 0.3s ease;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .account-dropdown li a:hover {
-  color: #007bff; /* Couleur au survol */
-}
-
-/* Items à l'intérieur des menus déroulants */
-.dropdown-menu li,
-.account-dropdown li {
-  margin: 0;
-  padding: 5px 10px;
-}
-
-/* Liens dans les menus déroulants */
-.dropdown-menu a,
-.account-dropdown a {
-  text-decoration: none; /* Supprime le soulignement */
-  color: #333; /* Couleur du texte */
-  font-weight: 500;
-  transition: color 0.3s ease; /* Animation fluide */
-}
-
-/* Effet au survol des liens */
-.dropdown-menu a:hover,
-.account-dropdown a:hover {
   color: #007bff; /* Couleur au survol */
 }
 
@@ -169,7 +141,7 @@ ul a:hover {
   align-items: center; /* Centre verticalement */
   justify-content: center; /* Centre horizontalement */
   cursor: pointer; /* Curseur clic */
-  transform: translateY(-2px); /* Ajustez la valeur pour remonter légèrement */
+  transform: translateY(0); /* Ajustez la valeur pour remonter légèrement */
 }
 
 .menu-search i {
@@ -192,8 +164,7 @@ ul a:hover {
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 5px;
-  z-index: 1000;
-  transform: translateY(40px); /* Ajoute un petit espacement sous le header */
+  z-index: 1000;  
 }
 
 .search-input {
@@ -218,73 +189,72 @@ ul a:hover {
     display: none; /* Cache les menus classique */
   }
 
-/* =========================
-   Menu Hamburger
-========================= */
+  /* =========================
+     Menu Hamburger
+  ========================= */
+  .menu-ham {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-.menu-ham {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  .menu-ham-dropdown {
+    position: absolute;
+    top: 100%; /* Place le menu sous l'icône */
+    left: 20px; /* Décale le menu légèrement vers la droite */
+    background-color: var(--primary-back-color);
+    box-shadow: var(--box-shadow);
+    border-radius: 5px;
+    width: 200px; /* Largeur fixe */
+    padding: 10px;
+    z-index: 1000;
+    text-align: left; /* Texte aligné à gauche */
+  }
+
+  .menu-ham-dropdown ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; /* Items en colonne */
+  }
+
+  .menu-ham-dropdown ul li {
+    display: flex; /* Pour aligner l'icône et le texte */
+    align-items: center; /* Centrer verticalement */
+    gap: 8px; /* Espacement entre l'icône et le texte */
+    margin: 4px 0; /* Espacement vertical */
+    padding: 1px 0;
+  }
+
+  .menu-ham-dropdown ul li.divider {
+    border-bottom: 1px solid var(--secondary-color); /* Ligne de séparation */
+    margin: 1px 0; /* Espacement au-dessus et au-dessous */
+  }
+
+  .menu-ham-dropdown ul li:last-child {
+    border-bottom: none;
+  }
+
+  .menu-ham-dropdown ul li a {
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 1rem;
+    display: block; /* Chaque lien prend toute la largeur */
+    flex: 1; /* S'assure que le texte prend le reste de l'espace */
+    transition: color 0.3s ease; /* Animation fluide */
+  }
+
+  .menu-ham-dropdown ul li a:hover {
+    color: var(--secondary-color);
+  }
+
+  .menu-ham-dropdown ul li svg {
+    font-size: 1.2rem; /* Taille des icônes */
+    color: var(--primary-color);
+  }
 }
 
-.menu-ham-dropdown {
-  position: absolute;
-  top: 100%; /* Place le menu sous l'icône */
-  left: 20px; /* Décale le menu légèrement vers la droite */
-  background-color: var(--primary-back-color);
-  box-shadow: var(--box-shadow);
-  border-radius: 5px;
-  width: 200px; /* Largeur fixe */
-  padding: 10px;
-  z-index: 1000;
-  text-align: left; /* Texte aligné à gauche */
-}
-
-.menu-ham-dropdown ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column; /* Items en colonne */
-}
-
-.menu-ham-dropdown ul li {
-  display: flex; /* Pour aligner l'icône et le texte */
-  align-items: center; /* Centrer verticalement */
-  gap: 8px; /* Espacement entre l'icône et le texte */
-  margin: 4px 0; /* Espacement vertical */
-  padding: 1px 0;
-}
-
-.menu-ham-dropdown ul li.divider {
-  border-bottom: 1px solid var(--secondary-color); /* Ligne de séparation */
-  margin: 1px 0; /* Espacement au-dessus et au-dessous */
-}
-
-.menu-ham-dropdown ul li:last-child {
-  border-bottom: none;
-}
-
-.menu-ham-dropdown ul li a {
-  color: var(--text-color);
-  text-decoration: none;
-  font-size: 1rem;
-  display: block; /* Chaque lien prend toute la largeur */
-  flex: 1; /* S'assure que le texte prend le reste de l'espace */
-  transition: color 0.3s ease; /* Animation fluide */
-}
-
-.menu-ham-dropdown ul li a:hover {
-  color: var(--secondary-color);
-}
-
-.menu-ham-dropdown ul li svg {
-  font-size: 1.2rem; /* Taille des icônes */
-  color: var(--primary-color);
-}
-
-/* Styles pour les grands écrans */
 @media (width >= 769px) {
   .header-menu.menu-left,
   .header-menu.menu-right {
@@ -294,5 +264,4 @@ ul a:hover {
   .menu-ham {
     display: none; /* Cache le menu hamburger */
   }
-}
 }
