ajout mesure de sécurité nonce

--- a/src/components/partiels/Header/Header.css
+++ b/src/components/partiels/Header/Header.css
@@ -1,5 +1,5 @@
 /* =========================
-   Header Global Styles
+   Header Global Styles Header.css
 ========================= */
 .header {
   display: flex;
