--- a/src/components/partiels/Menu/Menu.css
+++ b/src/components/partiels/Menu/Menu.css
@@ -1,5 +1,5 @@
 /* =========================
-   Menu Principal
+   Menu Principal Menu.css
 ========================= */
 
 /* Conteneur principal */
